Project

General

Profile

Actions

Bug #14388

closed

不正エンコーディング文字列から切り出した正当なエンコーディング文字列が invalid encoding になる

Bug #14388: 不正エンコーディング文字列から切り出した正当なエンコーディング文字列が invalid encoding になる

Added by tommy (Masahiro Tomita) over 8 years ago. Updated over 8 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.5.0p0 (2017-12-25 revision 61468) [x86_64-linux]
[ruby-dev:50424]

Description

data = "\xFFaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
p data.encoding               #=> #<Encoding:UTF-8>
p data                        #=> "\xFFaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
p data.valid_encoding?        #=> false
data2 = data[1..-1]
p data2                       #=> "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
p data2.valid_encoding?       #=> false
data3 = data2 + ""
p data3.valid_encoding?       #=> true

data は invalid ですが、data から切り出した data2 は valid のはずです。
末尾に空文字列を追加すると valid になります。

Actions

Also available in: PDF Atom